parser/tests/bad/arr04-1.st
% lower bound of an 'array' must be positive

var arr: array 0..2 of int
